--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<title>inTegraHouse</title>
+		<link rel="stylesheet" href="css/style.css" >
+		<link rel="stylesheet" href="css/normalize.css">
+			
 	</head>
 		<body>
+			<div class="flex-page">							
+				<div class="blackground"></div>
+					<div class="menu-left">					
+					</div>
+				<div class="logo"><img src="images/logo.png" alt="logo" title=""></div>
+				<div class="text-input"></div>
+			</div>
 		</body>
 </html>
