--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<title>inTegraHouse</title>
 		<link rel="stylesheet" href="css/style.css" >
 		<link rel="stylesheet" href="css/normalize.css">
-			
+		<style>
+@import url('https://fonts.googleapis.com/css?family=Exo+2');
+		</style>
 	</head>
 		<body>
 			<div class="flex-page">							
@@ -13,7 +15,15 @@
 					<div class="menu-left">					
 					</div>
 				<div class="logo"><img src="images/logo.png" alt="logo" title=""></div>
-				<div class="text-input"></div>
+					<div class="text-input">
+					<div class="text-input-font"><p>Thank you. In the near future<br> we will contact you.</p></div>
+						<div class="form-position">
+						<form>
+						<input class="input-email" type="email" name="email" placeholder="tavoelektroninis@pastas.lt"/>
+						<input  class="input-button" type="Submit" value="Prenumeruoti"/>
+						</form>
+						</div>
+					</div>
 			</div>
 		</body>
 </html>
