--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
 					<div class="text-input-font"><p>Thank you. In the near future<br> we will contact you.</p></div>
 						<div class="form-position">
 						<form>
-						<input class="input-email" type="email" name="email" placeholder="tavoelektroninis@pastas.lt"/>
+							
+						<input class="input-email" type="email" name="email" placeholder="tavoelektroninis@pastas.lt"/>						
 						<input  class="input-button" type="Submit" value="Prenumeruoti"/>
+						<div class="check-with-label">
+						<input class="check" type="checkbox" name="checked" required /> 
+						<label class="check-label" for="checked">Sutinku gauti naujienlaiskius is inTegra House</label>
+						</div>
 						</form>
 						</div>
 					</div>
