--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
 		<body>
 			<div class="flex-page">							
 				<div class="blackground"></div>
-					<div class="menu-left">					
+					<div class="menu-left">	
+						<div class="top-menu-block">
+							<a href="#"><div class="muted"></div></a>
+								<div class="language">
+									<a href="#"><div class="en"><p>En</p></div></a>
+									<a href="#"><div class="ru"><p>Ru</p></div></a>
+								</div>
+						</div>
+						<div class="bottom-menu-block">
+							<div class="social">
+								<a href="#"><div class="facebook"></div></a>
+								<a href="#"><div class="vimeo"></div></a>
+							</div>							
+							<div class="webey"><p>jus cia atvede<br><span class="big-font">webey</span></p></div>
+						</div>
 					</div>
 				<div class="logo"><img src="images/logo.png" alt="logo" title=""></div>
 					<div class="text-input">
